--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -1,5 +1,6 @@
 @import 'global/fonts';
 
+@import "sports/breadcrumb";
 @import 'sports/betslip';
 @import 'sports/markets';
 @import 'sports/sportsMenu';
