--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -6,8 +6,8 @@
     margin: 0 10px;
 }
 
-.markets-box.navigation {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+.markets-box-navigation {
+    @extend .font-title;
     font-size: 18px;
     color: #99ccff;
     line-height: 46px;
@@ -16,163 +16,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
 
-.markets-text.navigation.selected {
-    color: #FFF;
-}
-
-.markets-box.fixtures {
-    float: left;
-}
-
-.markets-table {
-    width: 100%;
-    border-collapse: separate;
-    table-layout: fixed;
-    border-spacing: 0;
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    text-align: center;
-    border-radius: 20px;
-}
-
-.markets-table-market {
-    border: 1px solid #4a7fb3;
-}
-
-.markets-tr {
-    height: 42px;
-}
-
-.markets-tr-market-header {
-    height: 25px;
-    background-color: #2d405c;
-}
-
-.markets-th-market-selection {
-     @extend .font-text;
-     color: #99ccff;
-     font-weight: normal;
-     font-size: 14px;
-     width: 213px;
- }
-
-.markets-th-market-separator {
-    width: 1px;
-}
-
-.markets-td-market-separator {
-    background-color: #2d405c;
-}
-
-.markets-tr.fixtures.header {
-    background-color: #1e293e;
-}
-
-.markets-th.date {
-    width: 60px;
-    background-color: #1e293e;
-    border-radius: 5px 0 0;
-}
-
-.markets-th.game {
-    width: 200px;
-    background-color: #1e293e;
-}
-
-.markets-th.favorite {
-    width: 30px;
-    background-color: #1e293e;
-}
-
-.markets-th.statistics {
-    width: 30px;
-    background-color: #1e293e;
-}
-
-.markets-th.separator {
-    width: 5px;
-    background: none;
-}
-
-.markets-th.selection {
-    font-size: 16px;
-    font-weight: normal;
-    color: #99ccff;
-    background-color: #2d415c;
-    width: 86px;
-}
-
-.markets-th.separator.onePx {
-    background-color: #2d415c;
-    width: 1px;
-}
-
-.markets-th.marketCount {
-    background-color: #1e293e;
-    width: 50px;
-    border-radius: 0 5px 0 0;
-}
-
-.markets-td.date {
-    font-size: 12px;
-    color: #99ccff;
-}
-
-.markets-td.game {
-    text-align: left;
-    font-size: 14px;
-    color: #FFF;
-    cursor: pointer;
-}
-
-.markets-td.favorite {
-    color: #99ccff;
-}
-
-.markets-td.statistics {
-    color: #99ccff;
-}
-
-.markets-td.separator {
-    background: none;
-}
-
-.markets-td.separator.onePx {
-    background-color: #2d415c;
-}
-
-.markets-td.selection {
-    background-color: #2d415c;
-}
-
-.markets-td-marketsCount.odd {
-    background-color: #435772;;
-}
-
-.markets-td-marketsCount {
-    font-size: 14px;
-    background-color: #2d415c;
-    color: #99ccff;
-    cursor: pointer;
-}
-
-.markets-td.date.even, .markets-td.game.even, .markets-td.favorite.even,
-.markets-td.statistics.even {
-    background-color: #2d415c;
-}
-
-.markets-td.date.odd, .markets-td.game.odd, .markets-td.favorite.odd,
-.markets-td.statistics.odd {
-    background-color: #435772;
-}
-
-.markets-td.selection.even {
-    background-color: #435772;
-}
-
-.markets-td.selection.odd {
-    background-color: #536883;
+    .selected {
+        color: #FFF;
+    }
 }
 
 .markets-button {
@@ -180,60 +27,161 @@
     background: none;
 }
 
-.markets-button-favorite {
+.markets-button-selection {
     @extend .markets-button;
-    font-size: 12px;
-}
-
-.markets-button-favorite.selected {
-    color: #ffcc00;
-}
-
-.markets-button.statistics {
-    font-size: 12px;
-}
-
-.markets-button.statistics.selected {
-    color: #ffcc00;
-}
-
-.markets-button.selection {
     font-size: 14px;
     color: #ffcc00;
     width: 100%;
     height: 42px;
+
+    &.selected {
+        font-weight: bold;
+        border: 2px solid #ff3300;
+    }
 }
 
-.markets-button.selection.selected {
-    font-weight: bold;
-    border: 2px solid #ff3300;
+.markets-button-favorite, .markets-button-statistics {
+    @extend .markets-button;
+    font-size: 12px;
+
+    &.selected {
+        color: #ffcc00;
+    }
 }
 
-.markets-box.markets.header {
+.markets-table {
+    width: 100%;
+    border-collapse: separate;
+    table-layout: fixed;
+    border-spacing: 0;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.markets-table-fixtures {
+    @extend .markets-table;
+
+    .header {
+        height: 42px;
+        font-size: 16px;
+        background-color: #1e293e;
+
+        .date {
+            width: 60px;
+            border-radius: 5px 0 0;
+        }
+
+        .game {
+            width: 200px;
+        }
+
+        .favorite {
+            width: 30px;
+        }
+
+        .statistics {
+            width: 30px;
+        }
+
+        .separator {
+            width: 5px;
+            background-color: #101928;
+        }
+
+        .selectionSeparator {
+            width: 1px;
+            background-color: #101928;
+        }
+
+        .selection {
+            font-weight: normal;
+            color: #99ccff;
+            background-color: #2d415c;
+            width: 86px;
+        }
+
+        .marketCount {
+            width: 50px;
+            border-radius: 0 5px 0 0;
+        }
+
+    }
+
+    .fixture {
+        height: 42px;
+        background-color: #2d415c;
+
+        .date {
+            font-size: 12px;
+            color: #99ccff;
+        }
+
+        .game {
+            text-align: left;
+            font-size: 14px;
+            color: #FFF;
+            cursor: pointer;
+        }
+
+        .favorite {
+            color: #99ccff;
+        }
+
+        .statistics {
+            color: #99ccff;
+        }
+
+        .separator {
+            background-color: #101928;
+
+            &.thin {
+                background-color: #2d415c;
+            }
+        }
+
+        .selection {
+            background-color: #435772;
+
+            &.odd {
+                background-color: #536883;
+            }
+        }
+
+        .marketsCount {
+            font-size: 14px;
+            background-color: #2d415c;
+            color: #99ccff;
+            cursor: pointer;
+
+            &.marketsCount.odd {
+                background-color: #435772;;
+            }
+        }
+
+        .odd {
+            background-color: #435772;
+        }
+
+    }
+}
+
+.markets-box-marketsHeader {
+    @extend .font-title;
     background-color: #1e293e;
     line-height: 42px;
     border-radius: 5px 5px 0 0;
-}
-
-.markets-text.markets.header {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     font-size: 18px;
     padding-left: 15px;
+
+    .close {
+        float: right;
+        margin: 13px 15px 0 0;
+        cursor: pointer;
+    }
 }
 
-.markets-button.markets.close {
-    float: right;
-    margin: 13px 15px 0 0;
-}
-
-.markets-content {
-    background-color: #101928;
-    /*border: 2px solid #ff9900;*/
-    border-radius: 5px;
-}
-
-.markets-box-market-title {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+.markets-box-marketTitle {
+    @extend .font-title;
     font-size: 16px;
     line-height: 42px;
     margin-top: 5px;
@@ -243,74 +191,468 @@
     padding: 0 20px;
 }
 
-.markets-th {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+.markets-table-market {
+    @extend .markets-table;
+    border-radius: 0;
+    border: 1px solid #4a7fb3;
+
+    .header {
+        height: 25px;
+        background-color: #2d405c;
+
+        .selection {
+            @extend .font-text;
+            color: #99ccff;
+            font-weight: normal;
+            font-size: 14px;
+            width: 212px;
+        }
+
+        .separator {
+            width: 1px;
+        }
+    }
+
+    .row {
+        height: 42px;
+
+
+        .separator {
+            background-color: #2d405c;
+        }
+
+        .selection {
+            background-color: #536883;
+
+            &.odd {
+                background-color: #2d415c;
+            }
+        }
+    }
 }
 
-.markets-th {
-    font-size: 16px;
-}
 
-.markets-th.marketName, .markets-td.marketName {
-    font-weight: normal;
-    color: #99ccff;
-    text-align: left;
-    width: 210px;
-    background-color: #1e293e;
-    padding: 0 10px 0 20px;
-}
-
-.markets-th.selection.triple {
-
-    background-color: #1e293e;
-}
-
-.markets-th.selection.double {
-    width: 208px;
-    background-color: #1e293e;
-}
-
-.markets-th.selection.separator {
-    width: 5px;
-    background-color: #1e293e;
-}
-
-.markets-td.marketName {
-    font-size: 14px;
-    text-align: center;
-}
-
-.markets-td.selection.triple, .markets-td.selection.double {
-    background-color: #536883;
-}
-
-.markets-td.selection.triple.odd, .markets-td.selection.double.odd {
-    background-color: #2d415c;
-}
-
-.markets-td.selection.separator {
-    width: 5px;
-    background-color: #101928;
-}
-
-@keyframes updated-up-keyframes {
-    0%   {background-color: transparent;}
-    50% {background-color: green;}
-    100% {background-color: transparent;}
-}
-
-@keyframes updated-down-keyframes {
-    0%   {background-color: transparent;}
-    50% {background-color: #ff3300;}
-    100% {background-color: transparent;}
-}
-
-.updated-up {
-    animation-name: updated-up-keyframes;
-    animation-duration: 5s;
-}
-
-.updated-down {
-    animation-name: updated-down-keyframes;
-    animation-duration: 5s;
-}
+//
+//.markets-tr {
+//
+//}
+//
+//.markets-tr-market-header {
+//}
+//
+//
+//.markets-td-market-separator {
+//    background-color: #2d405c;
+//}
+//
+//
+///* graveward */
+//
+//
+//
+//.markets-tr.fixtures.header {
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.date {
+//}
+//
+//.markets-td.date.even, .markets-td.game.even, .markets-td.favorite.even,
+//.markets-td.statistics.even {
+//    background-color: #2d415c;
+//}
+//
+//
+//
+//.markets-button {
+//    border: 0;
+//    background: none;
+//}
+//
+//
+//.markets-button.markets.close {
+//    float: right;
+//    margin: 13px 15px 0 0;
+//}
+//
+//.markets-content {
+//    background-color: #101928;
+//    /*border: 2px solid #ff9900;*/
+//    border-radius: 5px;
+//}
+//
+//
+//.markets-th {
+//    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+//}
+//
+//.markets-th {
+//    font-size: 16px;
+//}
+//
+//.markets-th.marketName, .markets-td.marketName {
+//    font-weight: normal;
+//    color: #99ccff;
+//    text-align: left;
+//    width: 210px;
+//    background-color: #1e293e;
+//    padding: 0 10px 0 20px;
+//}
+//
+//.markets-th.selection.triple {
+//
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.selection.double {
+//    width: 208px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.selection.separator {
+//    width: 5px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-td.marketName {
+//    font-size: 14px;
+//    text-align: center;
+//}
+//
+//
+//.markets-td.selection.separator {
+//    width: 5px;
+//    background-color: #101928;
+//}
+//
+//@keyframes updated-up-keyframes {
+//    0%   {background-color: transparent;}
+//    50% {background-color: green;}
+//    100% {background-color: transparent;}
+//}
+//
+//@keyframes updated-down-keyframes {
+//    0%   {background-color: transparent;}
+//    50% {background-color: #ff3300;}
+//    100% {background-color: transparent;}
+//}
+//
+//.updated-up {
+//    animation-name: updated-up-keyframes;
+//    animation-duration: 5s;
+//}
+//
+//.updated-down {
+//    animation-name: updated-down-keyframes;
+//    animation-duration: 5s;
+//}
+//.markets-container {
+//    float: left;
+//    min-height: 600px;
+//    color: #fff;
+//    width: 640px;
+//    margin: 0 10px;
+//}
+//
+//
+//
+//
+//.markets-box.navigation {
+//    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+//    font-size: 18px;
+//    color: #99ccff;
+//    line-height: 46px;
+//    margin-bottom: 8px;
+//    padding: 0 15px;
+//    white-space: nowrap;
+//    overflow: hidden;
+//    text-overflow: ellipsis;
+//}
+//
+//.markets-text.navigation.selected {
+//    color: #FFF;
+//}
+//
+//.markets-box.fixtures {
+//    float: left;
+//}
+//
+//.markets-table {
+//    width: 100%;
+//    border-collapse: separate;
+//    table-layout: fixed;
+//    border-spacing: 0;
+//    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+//    text-align: center;
+//    border-radius: 20px;
+//}
+//
+//.markets-table-market {
+//    border: 1px solid #4a7fb3;
+//}
+//
+//
+//.markets-tr-market-header {
+//    height: 25px;
+//    background-color: #2d405c;
+//}
+//
+//.markets-th-market-selection {
+//    @extend .font-text;
+//    color: #99ccff;
+//    font-weight: normal;
+//    font-size: 14px;
+//    width: 213px;
+//}
+//
+//.markets-th-market-separator {
+//    width: 1px;
+//}
+//
+//}
+//
+//.markets-tr.fixtures.header {
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.date {
+//    width: 60px;
+//    background-color: #1e293e;
+//    border-radius: 5px 0 0;
+//}
+//
+//.markets-th.game {
+//    width: 200px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.favorite {
+//    width: 30px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.statistics {
+//    width: 30px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.separator {
+//    width: 5px;
+//    background: none;
+//}
+//
+//.markets-th.selection {
+//    font-size: 16px;
+//    font-weight: normal;
+//    color: #99ccff;
+//    background-color: #2d415c;
+//    width: 86px;
+//}
+//
+//.markets-th.separator.onePx {
+//    background-color: #2d415c;
+//    width: 1px;
+//}
+//
+//.markets-th.marketCount {
+//    background-color: #1e293e;
+//    width: 50px;
+//    border-radius: 0 5px 0 0;
+//}
+//
+//.markets-td.date {
+//    font-size: 12px;
+//    color: #99ccff;
+//}
+//
+//.markets-td.game {
+//    text-align: left;
+//    font-size: 14px;
+//    color: #FFF;
+//    cursor: pointer;
+//}
+//
+//.markets-td.favorite {
+//    color: #99ccff;
+//}
+//
+//.markets-td.statistics {
+//    color: #99ccff;
+//}
+//
+//.markets-td.separator {
+//    background: none;
+//}
+//
+//.markets-td.separator.onePx {
+//    background-color: #2d415c;
+//}
+//
+//.markets-td.selection {
+//    background-color: #2d415c;
+//}
+//
+//.markets-td-marketsCount.odd {
+//    background-color: #435772;;
+//}
+//
+//.markets-td-marketsCount {
+//    font-size: 14px;
+//    background-color: #2d415c;
+//    color: #99ccff;
+//    cursor: pointer;
+//}
+//
+//.markets-td.date.even, .markets-td.game.even, .markets-td.favorite.even,
+//.markets-td.statistics.even {
+//    background-color: #2d415c;
+//}
+//
+//.markets-td.date.odd, .markets-td.game.odd, .markets-td.favorite.odd,
+//.markets-td.statistics.odd {
+//    background-color: #435772;
+//}
+//
+//.markets-td.selection.even {
+//    background-color: #435772;
+//}
+//
+//.markets-td.selection.odd {
+//    background-color: #536883;
+//}
+//
+//.markets-button {
+//    border: 0;
+//    background: none;
+//}
+//
+//.markets-button-favorite {
+//    @extend .markets-button;
+//    font-size: 12px;
+//}
+//
+//.markets-button-favorite.selected {
+//    color: #ffcc00;
+//}
+//
+//.markets-button.statistics {
+//    font-size: 12px;
+//}
+//
+//.markets-button.statistics.selected {
+//    color: #ffcc00;
+//}
+//
+//.markets-button.selection {
+//    font-size: 14px;
+//    color: #ffcc00;
+//    width: 100%;
+//    height: 42px;
+//}
+//
+//.markets-button.selection.selected {
+//    font-weight: bold;
+//    border: 2px solid #ff3300;
+//}
+//
+//.markets-box.markets.header {
+//    background-color: #1e293e;
+//    line-height: 42px;
+//    border-radius: 5px 5px 0 0;
+//}
+//
+//.markets-text.markets.header {
+//    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+//    font-size: 18px;
+//    padding-left: 15px;
+//}
+//
+//
+//.markets-content {
+//    background-color: #101928;
+//    /*border: 2px solid #ff9900;*/
+//    border-radius: 5px;
+//}
+//
+//.markets-box-market-title {
+//    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+//    font-size: 16px;
+//    line-height: 42px;
+//    margin-top: 5px;
+//    height: 42px;
+//    color: #FFF;
+//    background-color: #4a7fb3;
+//    padding: 0 20px;
+//}
+//
+//.markets-th {
+//    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+//}
+//
+//.markets-th {
+//    font-size: 16px;
+//}
+//
+//.markets-th.marketName, .markets-td.marketName {
+//    font-weight: normal;
+//    color: #99ccff;
+//    text-align: left;
+//    width: 210px;
+//    background-color: #1e293e;
+//    padding: 0 10px 0 20px;
+//}
+//
+//.markets-th.selection.triple {
+//
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.selection.double {
+//    width: 208px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-th.selection.separator {
+//    width: 5px;
+//    background-color: #1e293e;
+//}
+//
+//.markets-td.marketName {
+//    font-size: 14px;
+//    text-align: center;
+//}
+//
+//.markets-td.selection.triple, .markets-td.selection.double {
+//    background-color: #536883;
+//}
+//
+//.markets-td.selection.triple.odd, .markets-td.selection.double.odd {
+//    background-color: #2d415c;
+//}
+//
+//.markets-td.selection.separator {
+//    width: 5px;
+//    background-color: #101928;
+//}
+//
+//@keyframes updated-up-keyframes {
+//    0%   {background-color: transparent;}
+//    50% {background-color: green;}
+//    100% {background-color: transparent;}
+//}
+//
+//@keyframes updated-down-keyframes {
+//    0%   {background-color: transparent;}
+//    50% {background-color: #ff3300;}
+//    100% {background-color: transparent;}
+//}
+//
+//.updated-up {
+//    animation-name: updated-up-keyframes;
+//    animation-duration: 5s;
+//}
+//
+//.updated-down {
+//    animation-name: updated-down-keyframes;
+//    animation-duration: 5s;
+//}
