--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -1,7 +1,9 @@
 @import 'global/fonts';
 
-@import "sports/breadcrumb";
+@import 'slider/slider-defs.scss';
+@import 'sports/breadcrumb';
 @import 'sports/betslip';
 @import 'sports/markets';
+@import 'sports/liveMenu';
 @import 'sports/sportsMenu';
 
