--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -1,7 +1,9 @@
 @import 'global/fonts';
 
-@import 'slider/slider-defs.scss';
-@import 'sports/breadcrumb';
+@import 'carousel/carousel.scss';
+
+@import 'breadcrumb/breadcrumb';
+
 @import 'sports/betslip';
 @import 'sports/markets';
 @import 'sports/liveMenu';
