Listas de jogos separadas  #7 #27

--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -4,6 +4,7 @@
 
 @import 'breadcrumb/breadcrumb';
 
+@import 'sports/fixtures.scss';
 @import 'sports/betslip';
 @import 'sports/markets';
 @import 'sports/liveMenu';
