--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1,4 +1,4 @@
-.font-title, .breadcrumb, .markets-box-marketsHeader, .markets-box-marketTitle, .menuLive .sport, .sportsMenu-interval .header {
+.font-title, .breadcrumb, .fixtures .header .game, .fixtures .header .live, .markets-box-marketsHeader, .markets-box-marketTitle, .menuLive .sport, .sportsMenu-interval .header {
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif; }
 
 .font-text, .markets-table-market .header .selection, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
@@ -242,6 +242,83 @@
   text-overflow: ellipsis; }
   .breadcrumb .selected {
     color: #FFF; }
+
+.fixtures {
+  width: 100%;
+  border-collapse: separate;
+  table-layout: fixed;
+  border-spacing: 0;
+  text-align: center;
+  border-radius: 20px; }
+  .fixtures .header {
+    height: 42px;
+    font-size: 16px;
+    background-color: #1e293e; }
+    .fixtures .header.sport {
+      background-color: #4a7fb3; }
+    .fixtures .header .date {
+      width: 60px;
+      border-radius: 5px 0 0; }
+    .fixtures .header .game {
+      font-size: 18px;
+      font-weight: normal;
+      text-align: left;
+      width: 200px; }
+    .fixtures .header .live {
+      font-size: 14px;
+      background-color: #ff3300; }
+    .fixtures .header .favorite {
+      width: 30px; }
+    .fixtures .header .statistics {
+      width: 30px; }
+    .fixtures .header .separator {
+      width: 5px;
+      background-color: #101928; }
+    .fixtures .header .selectionSeparator {
+      width: 1px;
+      background-color: #2d415c; }
+    .fixtures .header .selection {
+      font-weight: normal;
+      color: #99ccff;
+      background-color: #2d415c;
+      width: 86px; }
+    .fixtures .header .marketCount {
+      width: 50px;
+      border-radius: 0 5px 0 0; }
+  .fixtures .fixture {
+    height: 42px;
+    background-color: #2d415c; }
+    .fixtures .fixture .date {
+      font-size: 12px;
+      color: #99ccff; }
+    .fixtures .fixture .game {
+      text-align: left;
+      font-size: 14px;
+      color: #FFF;
+      cursor: pointer; }
+    .fixtures .fixture .favorite {
+      width: 30px;
+      color: #99ccff; }
+    .fixtures .fixture .statistics {
+      width: 30px;
+      color: #99ccff; }
+    .fixtures .fixture .separator {
+      background-color: #101928; }
+      .fixtures .fixture .separator.thin {
+        background-color: #2d415c; }
+    .fixtures .fixture .selection {
+      background-color: #435772; }
+      .fixtures .fixture .selection.odd {
+        background-color: #536883; }
+    .fixtures .fixture .marketsCount {
+      font-size: 14px;
+      background-color: #2d415c;
+      color: #99ccff;
+      cursor: pointer; }
+      .fixtures .fixture .marketsCount.marketsCount.odd {
+        background-color: #435772; }
+    .fixtures .fixture .odd {
+      background-color: #435772; }
 
 .betslip-container {
   float: left;
