Textos informativos boilerplate #31

--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -1,8 +1,10 @@
 @import 'global/fonts';
 
-@import 'carousel/carousel.scss';
+@import 'carousel/carousel';
 
 @import 'breadcrumb/breadcrumb';
+
+@import 'info/info';
 
 @import 'sports/fixtures.scss';
 @import 'sports/betslip';
