--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -254,8 +254,10 @@
     font-weight: bold;
     padding: 0 20px;
     background-color: #ff9900; }
-    .info .header .close {
+    .info .header i {
       float: right;
+      cursor: pointer;
+      margin-left: 20px;
       line-height: 45px; }
   .info .links {
     padding: 0 20px;
@@ -271,15 +273,14 @@
         cursor: pointer; }
         .info .links .links-content .link.last {
           width: 16%; }
-        .info .links .links-content .link.selected {
+        .info .links .links-content .link:hover, .info .links .links-content .link.selected {
           color: #ff9900;
           font-weight: bold; }
   .info .content {
     font-size: 14px;
     color: #000;
     padding: 20px;
-    height: 200px;
-    min-height: 200px; }
+    min-height: 300px; }
 
 .fixtures {
   width: 100%;
