--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -1,5 +1,9 @@
 @import 'global/fonts';
 
+@import 'selection/selection';
+
+@import 'updater/updater';
+
 @import 'carousel/carousel';
 
 @import 'breadcrumb/breadcrumb';
