--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1,8 +1,63 @@
-.font-title, .breadcrumb, .fixtures .header .game, .fixtures .header .live, .markets-box-marketsHeader, .markets-box-marketTitle, .menuLive .sport, .sportsMenu-interval .header {
+.font-title, .breadcrumb, .info .content h1, .fixtures .header .game, .fixtures .header .live, .markets .header, .markets .title, .menuLive .sport, .sportsMenu-interval .header {
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif; }
 
-.font-text, .info .links, .info .content, .markets-table-market .header .selection, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
+.font-text, .info .links, .info .content, .info .content h2, .info .content h3, .info .content h4, .info .content p, .markets table, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
   font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif; }
+
+.selection-button {
+  border: 0;
+  background: none;
+  font-size: 14px;
+  color: #ffcc00;
+  width: 100%;
+  height: 42px; }
+  .selection-button.selected {
+    font-weight: bold;
+    border: 2px solid #ff3300; }
+
+@-webkit-keyframes updater-up-keyframes {
+  0% {
+    background-color: transparent; }
+  50% {
+    background-color: green; }
+  100% {
+    background-color: transparent; } }
+
+@keyframes updater-up-keyframes {
+  0% {
+    background-color: transparent; }
+  50% {
+    background-color: green; }
+  100% {
+    background-color: transparent; } }
+
+@-webkit-keyframes updater-down-keyframes {
+  0% {
+    background-color: transparent; }
+  50% {
+    background-color: #ff3300; }
+  100% {
+    background-color: transparent; } }
+
+@keyframes updater-down-keyframes {
+  0% {
+    background-color: transparent; }
+  50% {
+    background-color: #ff3300; }
+  100% {
+    background-color: transparent; } }
+
+.updater-up {
+  -webkit-animation-name: updater-up-keyframes;
+  animation-name: updater-up-keyframes;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s; }
+
+.updater-down {
+  -webkit-animation-name: updater-down-keyframes;
+  animation-name: updater-down-keyframes;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s; }
 
 /* Slider */
 .carousel {
@@ -257,11 +312,11 @@
     .info .header i {
       float: right;
       cursor: pointer;
-      margin-left: 20px;
+      margin-left: 15px;
       line-height: 45px; }
   .info .links {
     padding: 0 20px;
-    font-size: 14px; }
+    font-size: 12px; }
     .info .links .links-content {
       border-bottom: 1px solid #2d415c;
       overflow: auto; }
@@ -269,18 +324,45 @@
         float: left;
         width: 28%;
         line-height: 35px;
-        color: #4a7fb3;
+        color: #3399ff;
         cursor: pointer; }
         .info .links .links-content .link.last {
           width: 16%; }
+        .info .links .links-content .link i.fa-plus {
+          font-size: 10px;
+          font-weight: lighter; }
+        .info .links .links-content .link i.fa-caret-down {
+          font-size: 12px; }
         .info .links .links-content .link:hover, .info .links .links-content .link.selected {
           color: #ff9900;
           font-weight: bold; }
   .info .content {
-    font-size: 14px;
+    font-size: 12px;
     color: #000;
     padding: 20px;
     min-height: 300px; }
+    .info .content h1 {
+      font-size: 18px; }
+    .info .content h2 {
+      font-size: 18px;
+      color: #ff9900; }
+    .info .content h3 {
+      font-size: 14px;
+      color: #000; }
+    .info .content h4 {
+      font-weight: bold;
+      font-size: 12px;
+      color: #000; }
+    .info .content p {
+      font-size: 12px;
+      padding: 5px 10px; }
+    .info .content table {
+      width: 100%; }
+      .info .content table th, .info .content table td {
+        padding: 3px; }
+      .info .content table th {
+        color: #FFF;
+        background-color: #ff9900; }
 
 .fixtures {
   width: 100%;
@@ -542,105 +624,27 @@
   width: 640px;
   margin: 0 10px; }
 
-.markets-button, .markets-button-selection, .markets-button-favorite, .markets-button-statistics {
+.markets-button, .markets-button-favorite, .markets-button-statistics {
   border: 0;
   background: none; }
-
-.markets-button-selection {
-  font-size: 14px;
-  color: #ffcc00;
-  width: 100%;
-  height: 42px; }
-  .markets-button-selection.selected {
-    font-weight: bold;
-    border: 2px solid #ff3300; }
 
 .markets-button-favorite, .markets-button-statistics {
   font-size: 12px; }
   .markets-button-favorite.selected, .markets-button-statistics.selected {
     color: #ffcc00; }
 
-.markets-table, .markets-table-fixtures, .markets-table-market {
-  width: 100%;
-  border-collapse: separate;
-  table-layout: fixed;
-  border-spacing: 0;
-  text-align: center;
-  border-radius: 20px; }
-
-.markets-table-fixtures .header {
-  height: 42px;
-  font-size: 16px;
-  background-color: #1e293e; }
-  .markets-table-fixtures .header .date {
-    width: 60px;
-    border-radius: 5px 0 0; }
-  .markets-table-fixtures .header .game {
-    width: 200px; }
-  .markets-table-fixtures .header .favorite {
-    width: 30px; }
-  .markets-table-fixtures .header .statistics {
-    width: 30px; }
-  .markets-table-fixtures .header .separator {
-    width: 5px;
-    background-color: #101928; }
-  .markets-table-fixtures .header .selectionSeparator {
-    width: 1px;
-    background-color: #101928; }
-  .markets-table-fixtures .header .selection {
-    font-weight: normal;
-    color: #99ccff;
-    background-color: #2d415c;
-    width: 86px; }
-  .markets-table-fixtures .header .marketCount {
-    width: 50px;
-    border-radius: 0 5px 0 0; }
-
-.markets-table-fixtures .fixture {
-  height: 42px;
-  background-color: #2d415c; }
-  .markets-table-fixtures .fixture .date {
-    font-size: 12px;
-    color: #99ccff; }
-  .markets-table-fixtures .fixture .game {
-    text-align: left;
-    font-size: 14px;
-    color: #FFF;
-    cursor: pointer; }
-  .markets-table-fixtures .fixture .favorite {
-    color: #99ccff; }
-  .markets-table-fixtures .fixture .statistics {
-    color: #99ccff; }
-  .markets-table-fixtures .fixture .separator {
-    background-color: #101928; }
-    .markets-table-fixtures .fixture .separator.thin {
-      background-color: #2d415c; }
-  .markets-table-fixtures .fixture .selection {
-    background-color: #435772; }
-    .markets-table-fixtures .fixture .selection.odd {
-      background-color: #536883; }
-  .markets-table-fixtures .fixture .marketsCount {
-    font-size: 14px;
-    background-color: #2d415c;
-    color: #99ccff;
-    cursor: pointer; }
-    .markets-table-fixtures .fixture .marketsCount.marketsCount.odd {
-      background-color: #435772; }
-  .markets-table-fixtures .fixture .odd {
-    background-color: #435772; }
-
-.markets-box-marketsHeader {
+.markets .header {
   background-color: #1e293e;
   line-height: 42px;
   border-radius: 5px 5px 0 0;
   font-size: 18px;
   padding-left: 20px; }
-  .markets-box-marketsHeader .close {
+  .markets .header .close {
     float: right;
     margin: 13px 15px 0 0;
     cursor: pointer; }
 
-.markets-box-marketTitle {
+.markets .title {
   font-size: 16px;
   line-height: 42px;
   margin-top: 5px;
@@ -649,71 +653,37 @@
   background-color: #4a7fb3;
   padding: 0 20px; }
 
-.markets-table-market {
+.markets table {
+  width: 100%;
+  border-collapse: separate;
+  table-layout: fixed;
+  border-spacing: 0;
+  text-align: center;
+  border: 1px solid #4a7fb3;
   border-radius: 0;
-  border: 1px solid #4a7fb3; }
-  .markets-table-market .header {
+  font-size: 14px; }
+  .markets table .header {
     height: 25px;
     background-color: #2d405c; }
-    .markets-table-market .header .selection {
+    .markets table .header .selection {
       color: #99ccff;
       font-weight: normal;
       font-size: 14px;
       width: 212px; }
-    .markets-table-market .header .separator {
+    .markets table .header .separator {
       width: 1px; }
-  .markets-table-market .row {
+  .markets table .row {
     height: 42px; }
-    .markets-table-market .row .separator {
+    .markets table .row .separator {
       background-color: #2d405c; }
-    .markets-table-market .row .selection {
+    .markets table .row .selection {
       background-color: #536883; }
-      .markets-table-market .row .selection.odd {
+      .markets table .row .selection.odd {
         background-color: #2d415c; }
-
-@-webkit-keyframes updated-up-keyframes {
-  0% {
-    background-color: transparent; }
-  50% {
-    background-color: green; }
-  100% {
-    background-color: transparent; } }
-
-@keyframes updated-up-keyframes {
-  0% {
-    background-color: transparent; }
-  50% {
-    background-color: green; }
-  100% {
-    background-color: transparent; } }
-
-@-webkit-keyframes updated-down-keyframes {
-  0% {
-    background-color: transparent; }
-  50% {
-    background-color: #ff3300; }
-  100% {
-    background-color: transparent; } }
-
-@keyframes updated-down-keyframes {
-  0% {
-    background-color: transparent; }
-  50% {
-    background-color: #ff3300; }
-  100% {
-    background-color: transparent; } }
-
-.updated-up {
-  -webkit-animation-name: updated-up-keyframes;
-  animation-name: updated-up-keyframes;
-  -webkit-animation-duration: 5s;
-  animation-duration: 5s; }
-
-.updated-down {
-  -webkit-animation-name: updated-down-keyframes;
-  animation-name: updated-down-keyframes;
-  -webkit-animation-duration: 5s;
-  animation-duration: 5s; }
+    .markets table .row .handicap {
+      color: #99ccff;
+      font-weight: bold;
+      background-color: #1e293e; }
 
 .menuLive ul li:first-child .sport:first-child {
   border-radius: 0 5px 0 0; }
