--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -5,7 +5,7 @@
     border-spacing: 0;
     text-align: center;
     border-radius: 20px;
-
+    margin-bottom: 15px;
 
     .header {
         height: 42px;
