--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -102,6 +102,9 @@
             th,td {
                 padding: 3px;
             }
+            .tipo{
+                width:10%;
+            }
 
             th {
                 color: #FFF;
