--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1051,7 +1051,7 @@
   font-size: 10px;
   float: right;
   margin: 0 -35px 0 0;
-  background-color: #faffbd;
+  background-color: #ff9900;
 }
 .bs-wp .navbar-default.navbar-2nd .nav-ontop .btn {
   position: relative;
@@ -1224,11 +1224,11 @@
   display: none;
 }
 .bs-wp #saveLoginForm input {
+  background-color: #ff9900 !important;
   margin: 0;
-  background-color: #faffbd;
 }
 .bs-wp #saveLoginForm .btn-login-sub {
-  background-color: #efd83c;
+  background-color: #ff9900;
   color: #000000;
   border: 1px solid #000000;
   font-size: 10px;
